--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li class="nav-item">
                 <a href="#home" class="nav-link nav-link-custom">Home</a>
             </li>
-            <li class="nav-item">
+            <li class="na>v-item">
                 <a href="#services" class="nav-link nav-link-custom">Services</a>
             </li>
             <li class="nav-item">
@@ -33,19 +33,30 @@
         <!-- Showcase Area -->
         <div class="container-fluid" id="back-img">
             <div class="container text-center text-light">
-                <h1>WELCOME</h1>
-                <h1>TO </h1>
-                <p>MY PIZZA ONLINE SHOPPING SITE</p>
+                <h1>Welcome</h1>
+                <h1>To </h1>
+                <p>Collins Pizza inn</P>
             </div>
         </div>
     </section>
 
     <section>
         <div class="services text-center text-dark back-img" id="services">
+        <div class="services">
             <h2>SERVICES</h2>
-            <P>We offer all types pf pizza as per your order.</P>
-            <p>Once an order has been made,the delivery will be done with immediate effect.</p>
+            <P>We offer all types of pizza as per your order.</P>
+            <p>Once an order has been made,the delivery will be done immediately.</p>
         </div>
+        </div>
+    </section>
+    <section>
+        <div class="Menu text-dark" id="Menu">
+        <div class="Menu">
+            <h3>MENU</h3>
+            <P></P>
+        </div>
+
+     </div>
     </section>
 
 </body>
