--- a/index.html
+++ b/index.html
@@ -49,12 +49,16 @@
         </div>
         </div>
     </section>
-    <section>
-        <div class="Menu text-dark" id="Menu">
-        <div class="Menu">
-            <h3>MENU</h3>
-            <P></P>
-        </div>
+        <section>
+            <div class="menu text-center text-light back-img"><br><br>
+                <h2>Menu</h2>
+                <P>pizza+soda (small)=800
+                    pizza+soda(medium)=1200
+                    pizza+soda(large)=1500<br><br>
+                .<br><br><br><br></P>
+            </div>
+        </section>
+    
 
      </div>
     </section>
