--- a/index.html
+++ b/index.html
@@ -50,18 +50,30 @@
         </div>
     </section>
         <section>
-            <div class="menu text-center text-light back-img"><br><br>
+            <div class="menu text-center"><br><br>
                 <h2>Menu</h2>
-                <P>pizza+soda (small)=800
-                    pizza+soda(medium)=1200
-                    pizza+soda(large)=1500<br><br>
+                <P>Neapolitan pizza (small)=800</p>
+                   <p>Sicilian pizza(medium)=1200</p>
+                  <p>Detroit pizza(large)=1500<br><br>
+<p> Greek pizza</p>
+<p>California pizza</p>
                 .<br><br><br><br></P>
             </div>
         </section>
     
-
-     </div>
-    </section>
+<section>
+                <div class="Order" text-center><br><br>
+                    <h3>Order</h3>
+                   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima in, cum omnis consequatur necessitatibus magnam, id, reprehenderit laudantium voluptas debitis facere adipisci autem totam. Neque itaque nesciunt at aperiam hic?
+                  </p>
+                </div>
+            </section>
+            <section>
+                <div class="contact">
+                    <h4>Contact</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime ducimus dolorum quis dolore voluptatem repellat odio nobis? Id est atque aliquam cupiditate minima quisquam? Ipsam quas ullam eaque nisi perspiciatis.</p>
+                </div>
+            </section>
 
 </body>
 </html>
