--- a/index.html
+++ b/index.html
@@ -50,13 +50,14 @@
         </div>
     </section>
         <section>
-            <div class="menu text-center"><br><br>
+            <div class="menu"></div>
+            <div class="menu text-center back-img"><br><br>
                 <h2>Menu</h2>
-                <P>Neapolitan pizza (small)=800</p>
-                   <p>Sicilian pizza(medium)=1200</p>
-                  <p>Detroit pizza(large)=1500<br><br>
-<p> Greek pizza</p>
-<p>California pizza</p>
+                <P>Neapolitan pizza (small)</p>
+                   <p>Sicilian pizza(medium)</p>
+                  <p>Detroit pizza(large)<br>
+                 <p> Greek pizza</p>
+                   <p>California pizza</p>
                 .<br><br><br><br></P>
             </div>
         </section>
