--- a/index.html
+++ b/index.html
@@ -71,16 +71,6 @@
       <div class="form-group" >
         <label for="crust" class="text-center">choose your crust</label>
         <select class="form-control" id="crust">
-          <option></option>
-          <option>thin</option>
-          <option>3</option>
-          <option>3</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="crust" class="text-center">choose your crust</label>
-        <select class="form-control" id="crust">
-          <option></option>
           <option>Small</option>
           <option>Medium</option>
           <option>Large</option>
@@ -89,10 +79,18 @@
       <div class="form-group">
         <label for="crust" class="text-center">choose your crust</label>
         <select class="form-control" id="crust">
-          <option></option>
-          <option></option>
-          <option>3</option>
-          <option>3</option>
+          
+          <option>Small</option>
+          <option>Medium</option>
+          <option>Large</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="crust" class="text-center">choose your crust</label>
+        <select class="form-control" id="crust">
+          <option>Small</option>
+          <option>Medium</option>
+          <option>Large</option>
         </select>
       </div>
      
