--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         <div class="menu"></div>
         <div class="menu text-center back-img"><br><br>
             <h2>Menu</h2>
-            <P>Neapolitan pizza (small)</p>
-            <p>Sicilian pizza(medium)</p>
-            <p>Detroit pizza(large)<br>
+            <P>Neapolitan pizza</p>
+            <p>Sicilian pizza</p>
+            <p>Detroit pizza<br>
             <p> Greek pizza</p>
             <p>California pizza</p>
             .<br><br><br><br></P>
@@ -72,7 +72,7 @@
             <form>
 
                 <div class="form-group">
-                    <label for="crust" class="text-center">choose your crust</label>
+                    <label for="crust" class="text-center">Choose your size and type</label>
                     <select class="form-control" id="crust">
                         <option>Small</option>
                         <option>Medium</option>
@@ -80,7 +80,7 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="crust" class="text-center">choose your crust</label>
+                    <label for="crust" class="text-center">choose your size and type</label>
                     <select class="form-control" id="crust">
 
                         <option>Small</option>
@@ -89,7 +89,7 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="crust" class="text-center">choose your crust</label>
+                    <label for="crust" class="text-center">choose your size and type</label>
                     <select class="form-control" id="crust">
                         <option>Small</option>
                         <option>Medium</option>
