--- a/index.html
+++ b/index.html
@@ -67,33 +67,30 @@
         </div>
     </section>
 
+
+    </div>
+    <div class="form-group">
+        <label for="Size" class="text-center">size </label>
+        <select class="form-control" id="crust">
+
+            <option>Small</option>
+            <option>Medium</option>
+            <option>Large</option>
+        </select>
+    </div>
     <section>
         <div class="cards" style="width: 45%;">
             <form>
 
                 <div class="form-group">
-                    <label for="crust" class="text-center">Choose your size and type</label>
+                    <label for="Type" class="text-center">Type </label>
                     <select class="form-control" id="crust">
-                        <option>Small</option>
-                        <option>Medium</option>
-                        <option>Large</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="crust" class="text-center">choose your size and type</label>
-                    <select class="form-control" id="crust">
+                        <option>Neapolitan pizza</option>
+                        <option>Sicilian pizza</option>
+                        <option>Detroit pizza</option>
+                        <option>Greek pizza</option>
+                        <option>California pizza</option>
 
-                        <option>Small</option>
-                        <option>Medium</option>
-                        <option>Large</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="crust" class="text-center">choose your size and type</label>
-                    <select class="form-control" id="crust">
-                        <option>Small</option>
-                        <option>Medium</option>
-                        <option>Large</option>
                     </select>
                 </div>
 
