number of pizza

--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@
             <li class="nav-item">
                 <a href="#order" class="nav-link nav-link-custom">Order</a>
             </li>
-            <li class="nav-item">
-                <a href="#contact" class="nav-link nav-link-custom">Contact</a>
-            </li>
         </nav>
     </section>
     <section>
@@ -93,13 +90,34 @@
 
                     </select>
                 </div>
+  </form>
+  <section>
+    <div class="cards" style="width: 45%;">
+        <form>
 
-
-
-            </form>
+            <div class="form-group">
+                <label for="Number" class="text-center">Number of pizza ordered </label>
+                <select class="form-control" id="Number">
+                    <option>1</option>
+                    <option>2</option>
+                    <option>3</option>
+                    <option>4</option>
+                    <option>5</option>
+                    <option>5</option>
+                    <option>6</option>
+                    <option>7</option>
+                    <option>8</option>
+                    <option>9</option>
+                    <option>10</option>
+                    
         </div>
     </section>
 
+    <section>
+<div class="container-fluid">
+
+</div>
+    </section>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
