number of pizza

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <form>
 
             <div class="form-group">
-                <label for="Number" class="text-center">Number of pizza ordered </label>
+                <label for="Number" class="text-center">How many </label>
                 <select class="form-control" id="Number">
                     <option>1</option>
                     <option>2</option>
