alert pop up message

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
     
 <div class="form-group">
 <div class="buy">
-    <label for="buy button" class="text-center">buy </label>
+    <label for="buy button" class="text-center bg-dark text-center text-dark">buy </label>
     <select class="form-control" id="crust">
-        <button type="button" class="btn btn-buy">Buy</button>
+        <button type="Submit" class="btn btn-buy" onclick="">Order</button>
         </div>
 </div>
     </section>
