--- a/index.html
+++ b/index.html
@@ -127,6 +127,18 @@
         </div>
 </div>
     </section>
+    <div class="row">
+        <div class="column4 col-md-12 text-center text-responsive">
+            <textarea name="MMERGE6" id="mce-MMERGE6" cols="" rows=""  placeholder="Your message here..." required></textarea>
+        </div>
+    </div>
+    
+    <button class="btn btn-light btn-block" type="submit" value="submit" id="mc-embedded-subscribe" class="button">Submit</button>
+
+</form>
+
+
+</div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
